--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
-Starter
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Light Theme</title>
+<link href="css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<!-- Main Container -->
+<div class="container"> 
+  <!-- Header -->
+  <header class="header">
+    <h4 class="logo">MAKAN TIME</h4>
+  </header>
+  <!-- Hero Section -->
+  <section class="intro">
+    <div class="column">
+      <h3>Let's Start eating!</h3>
+      <img src="Screenshot 2017-04-04 08.58.03.png" alt="" class="profile"> </div>
+    <div class="column">
+      <p>Something</p>
+      <p>Whatever</p>
+    </div>
+  </section>
+  <!-- Stats Gallery Section -->
+  <div class="gallery">
+    <div class="thumbnail"> <a href="#"><img src="Screenshot 2017-04-04 08.58.03.png" alt="" width="2000" class="cards"/></a>
+      <h4>FOOD STALL ONE</h4>
+      <p class="tag">Chinese</p>
+      <p class="text_column">Yum yum.</p>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="Screenshot 2017-04-04 08.58.03.png" alt="" width="2000" class="cards"/></a>
+      <h4>FOOD STALL TWO</h4>
+      <p class="tag">Malay</p>
+      <p class="text_column">Nice food.</p>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="Screenshot 2017-04-04 08.58.03.png" alt="" width="2000" class="cards"/></a>
+      <h4>FOOD STALL THREE</h4>
+      <p class="tag">Indian</p>
+      <p class="text_column">Fantastica.</p>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="Screenshot 2017-04-04 08.58.03.png" alt="" width="2000" class="cards"/></a>
+      <h4>FOOD STALL FOUR</h4>
+      <p class="tag">Western</p>
+      <p class="text_column">Great.</p>
+    </div>
+  </div>
+  <div class="gallery">
+    <div class="thumbnail"> <a href="#"><img src="Screenshot 2017-04-04 08.58.03.png" alt="" width="2000" class="cards"/></a>
+      <h4>FOOD STALL 5</h4>
+      <p class="tag">whatever</p>
+      <p class="text_column">tired of writing.</p>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="Screenshot 2017-04-04 08.58.03.png" alt="" width="2000" class="cards"/></a>
+      <h4>DOOF TALLS 6</h4>
+      <p class="tag">anything</p>
+      <p class="text_column">tired of typing.</p>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="Screenshot 2017-04-04 08.58.03.png" alt="" width="2000" class="cards"/></a>
+      <h4>FS 7</h4>
+      <p class="tag">..ehh.....</p>
+      <p class="text_column">....oops....</p>
+    </div>
+    <div class="thumbnail"> <a href="#"><img src="Screenshot 2017-04-04 08.58.03.png" alt="" width="2000" class="cards"/></a>
+      <h4>OMG</h4>
+      <p class="tag">Ahhhhh</p>
+      <p class="text_column">cbwvciwvi.</p>
+    </div>
+  </div>
+  <!-- Footer Section -->
+  <footer id="contact">
+    <p class="hero_header">GET IN TOUCH WITH US</p>
+    <div class="button">EMAIL US </div>
+  </footer>
+  <!-- Copyrights Section -->
+  <div class="copyright">&copy;2017 - <strong>MAKAN TIME</strong></div>
+</div>
+<!-- Main Container Ends -->
+</body>
+</html>
