--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="container"> 
   <!-- Header -->
   <header class="header">
-    <h4 class="logo">MAKAN TIME</h4>
+    <h4 class="logo"><font face="Brush Script Std">MAKAN TIME</font></h4>
   </header>
   <!-- Hero Section -->
   <section class="intro">
