--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <h3>Let's Start eating!</h3>
       <img src="Screenshot 2017-04-04 08.58.03.png" alt="" class="profile"> </div>
     <div class="column">
-      <p>Something</p>
-      <p>Whatever</p>
+      <p>We aim to help you reserve your food from the canteen with ease.</p>
+      <p>It's so easy, just choose from the list below and you do not have to queue any more!</p>
     </div>
   </section>
   <!-- Stats Gallery Section -->
