--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div class="media">
           <div class="media-left"> <a href="#"> <img class="media-object img-rounded" src="images/115X115.gif" alt="..."> </a> </div>
           <div class="media-body">
-            <h2 class="media-heading">Web Developer</h2>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, neque, in, accusamus optio architecto debitis dolor animi placeat ut ab corporis laboriosam itaque. Nobis, sapiente quo dolorum ut quod possimus doloremque suscipit ad doloribus quam dolor </div>
+            <h2 class="media-heading">Intro</h2>
+            I am open to anyone as my partner:D Also willing to build any project~ </div>
         </div>
       </div>
       <div class="col-xs-5 well">
