--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head></head>
-  <body>{"result":"118.189.136.170","code":200,"message":"ok"}</body>
-</html>
+{"result":"118.189.136.170","code":200,"message":"ok"}</body>
