--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to TomLBZ's Webpage!</title>
-  <link rel="stylesheet" href="main.css"/>
-  <script src="matter.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="./css/main.css"/>
+  <script src="./js/matter.js" type="text/javascript"></script>
   
 </head>
 
@@ -15,7 +15,7 @@
     <div id="main-canvas-element">
     </div>
   </div>
-  <script src="main.js" type="text/javascript"></script>
+  <script src="./js/main.js" type="text/javascript"></script>
 </body>
 
 </html>
