--- a/index.html
+++ b/index.html
@@ -6,16 +6,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to TomLBZ's Webpage!</title>
   <link rel="stylesheet" href="./css/main.css"/>
+  <script src="./js/ResizeSensor.js"></script>
+  <script src="./js/ElementQueries.js"></script>
   <script src="./js/matter.js" type="text/javascript"></script>
-  
 </head>
 
 <body>
-  <div class="main-wrapper">
-    <div id="main-canvas-element">
+  <div class="header">
+    <h1>Welcome to TomLBZ's Webpage!</h1>
+  </div>
+
+  <div class="row">
+    <div class="col-3 col-s-3 leftmenu" id="menu">
+      <ul>
+        <li>Menu 1</li>
+        <li>Menu 2</li>
+        <li>Menu 3</li>
+        <li>Menu 4</li>
+      </ul>
+    </div>
+
+    <div class="col-6 col-s-9 main-wrapper" id="parentmainelement">
+      <h1>Intro</h1>
+      <p>Drag and play the icons</p>
+      <div id="main-canvas-element">
+      </div>
+      <script src="./js/main.js" type="text/javascript"></script>
+    </div>
+
+    <div class="col-3 col-s-12 rightmenu">
+      <div class="aside">
+        <h2>A</h2>
+        <p>a</p>
+        <h2>B</h2>
+        <p>b</p>
+        <h2>C</h2>
+        <p>c</p>
+      </div>
     </div>
   </div>
-  <script src="./js/main.js" type="text/javascript"></script>
-</body>
 
+  <div class="footer">
+    <p>By TomLBZ</p>
+  </div>
+
+</body>
 </html>
